Cleanup, added Flask to skills list

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -1,4 +1,4 @@
-@require "partials/base"
+@require "partials/_base"
 
 bodyColor = #3949ab
 
@@ -52,7 +52,7 @@ body
 		margin 5px auto
 		min-width 100px
 
-@require "partials/hover-animation"
+@require "partials/_hover-animation"
 
 .parallax-container
 	height 400px
