--- a/src/views/partials/_main.pug
+++ b/src/views/partials/_main.pug
@@ -16,7 +16,7 @@ main
 							p.
 								I've always enjoyed tinkering with gadgets and poking around the deepest levels of settings in the software I use, so programming was a natural next step. I love the way it demands both the ability to solve problems creatively and then the application of those ideas in a logical and systematic fashion.
 							p.
-								I'm well-versed in HTML, CSS, Javascript, jQuery, PHP, Laravel, Git, and mySQL for the web. My preferred stack also includes Pug, Stylus, and Gulp. I also know a bit of Java for Android, and am currently learning Kotlin, Python, and webpack.
+								I'm well-versed in HTML, CSS, Javascript (jQuery and ES6), PHP (including Laravel), Git, and mySQL for the web. My preferred stack also includes Pug, Stylus, and Gulp. I also know a bit of Java (mostly for Android), Kotlin, and Python (with Flask).
 
 							.row.center-align#skillsList
 								+techSkill("HTML", "html5.svg")
@@ -34,7 +34,7 @@ main
 								+techSkill("Android", "android.png")
 								+techSkill("Kotlin", "kotlin.svg")
 								+techSkill("Python", "python.png")
-								+techSkill("webpack", "webpack.svg")
+								+techSkill("Flask", "flask.png")
 
 							h5 Some of my past projects:
 							.row.carousel.carousel-slider.center(data-indicators="true")
