--- a/src/views/partials/_mixins.pug
+++ b/src/views/partials/_mixins.pug
@@ -1,18 +1,15 @@
 mixin techSkill(name, img)
-	- var path = "images/logos/" + img
-	img.tech-skill.tooltipped(src=path alt=name data-position="bottom" data-delay="50" data-tooltip=name)
+	img.tech-skill.tooltipped(src=`images/logos/${img}` alt=name data-position="bottom" data-delay="50" data-tooltip=name)
 
 mixin thing(url, img, name)
 	.thing.col.s6.m4.l3
 		a(href=url)
 			.card.small.hoverable
 				.card-image
-					- var path = "images/things/" + img
-					img(src=path alt=name)
+					img(src=`images/things/${img}` alt=name)
 				.card-content.valign-wrapper
 					span.black-text #{name}
 
 mixin imgLink(url, img, name)
-	- var path = "images/icons/" + img + ".png"
 	a(href=url)
-		img.hoverable(src=path alt=name)
+		img.hoverable(src=`images/icons/${img}.png` alt=name)
