Updated info, streamlined skills list

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -77,11 +77,18 @@ body
 .page-section
 	margin-bottom 60px
 
+#skillsList
+	center X relative
+	@media TabletUp
+		max-width 70%
+
 .tech-skill
+	display inline-block
 	height 10vh
 	margin 10px
-	@media TabletOnly
+	@media TabletDown
 		height 7vh
+		margin 5px
 
 .carousel-item
 	*
