--- a/src/views/partials/_header.pug
+++ b/src/views/partials/_header.pug
@@ -17,7 +17,7 @@ header#banner.container
 						a(href="https://www.facebook.com/salvador.nico")
 							i.fa.fa-facebook-official(aria-hidden="true")
 
-		.col.s12.l7.sidebox
+		.col.s12.m10.offset-m1.l7.sidebox
 			.row
 				.col.s12
 					h2 Hi, I'm Nico.
@@ -27,13 +27,9 @@ header#banner.container
 						I've always had a hard time picking what it is I'm most into over the course of my life. There are just so many awesome things out there in the world to be involved in, why just choose one? I believe that incredible things can come out of the most unlikely partnerships.
 					h3 Let's get in touch!
 			.row.center-align
-				.col.s12.m6
+				.col.s12.m6.offset-m3.pull-l3
 					a#scrollDownBtn.waves-effect.waves-light.btn-large.red.darken-1.hoverable(href="#contacts" target="_parent" data-scroll)
 						i.material-icons.left chat_bubble
 						span Contact Me
-				.col.s12.m6
-					a.waves-effect.waves-light.btn-large.red.darken-1.hoverable(href="./files/Nico_Salvador-CV2017.pdf")
-						i.material-icons.left library_books
-						span Resum&#233;
 			.row
 				a#seeMore.hvr-icon-hang.white-text(href="#things" target="_parent" data-scroll)
