--- a/src/views/partials/_main.pug
+++ b/src/views/partials/_main.pug
@@ -10,31 +10,27 @@ main
 				ul.collapsible.popout(data-collapsible="expandable")
 					li
 						.collapsible-header.black-text#collapsible-1.
-							Web development
+							Software development
 						.collapsible-body.white
 
 							p.
 								I've always enjoyed tinkering with gadgets and poking around the deepest levels of settings in the software I use, so programming was a natural next step. I love the way it demands both the ability to solve problems creatively and then the application of those ideas in a logical and systematic fashion.
 							p.
-								I'm well-versed in HTML, CSS, Javascript (jQuery and ES6), PHP (including Laravel), Git, and mySQL for the web. My preferred stack also includes Pug, Stylus, and Gulp. I also know a bit of Java (mostly for Android), Kotlin, and Python (with Flask).
+								Web development is my main expertise, with Pug, Stylus, ES6 Javascript, and Gulp as my preferred stack. Kotlin and Python are my two other favorite languages. I also know my way around jQuery, PHP (including Laravel), mySQL, and Java (mostly for Android).
 
 							.row.center-align#skillsList
-								+techSkill("HTML", "html5.svg")
-								+techSkill("CSS", "css3.svg")
 								+techSkill("Pug", "pug.svg")
 								+techSkill("Stylus", "stylus.png")
 								+techSkill("Javascript", "js.svg")
-								+techSkill("jQuery", "jquery.png")
 								+techSkill("Gulp", "gulp.svg")
+								+techSkill("Kotlin", "kotlin.svg")
+								+techSkill("Python", "python.png")
+								+techSkill("jQuery", "jquery.png")
 								+techSkill("PHP", "php.svg")
 								+techSkill("Laravel", "laravel.png")
-								+techSkill("Git", "git.png")
 								+techSkill("mySQL", "mysql.png")
 								+techSkill("Java", "java.png")
 								+techSkill("Android", "android.png")
-								+techSkill("Kotlin", "kotlin.svg")
-								+techSkill("Python", "python.png")
-								+techSkill("Flask", "flask.png")
 
 							h5 Some of my past projects:
 							.row.carousel.carousel-slider.center(data-indicators="true")
@@ -98,14 +94,12 @@ main
 
 					li
 						.collapsible-header.black-text#collapsible-4.
-							Rollerblading
+							Inline skating
 						.collapsible-body.white
 							p.
-								Been at it on and off since 2002 (see my lame 2011-era video footage below), skating parks around the Philippines, Malaysia, China, Singapore, Korea, and Australia along the way.
+								I've been at it on and off since 2002 (see my lame 2011-era video footage below), skating parks around the Philippines, Malaysia, China, Singapore, Korea, and Australia along the way.
 							p.
-								Founded <a href="https://www.facebook.com/ElevateSkate/">Elevate Skate Co.</a> a while back, importing gear from shops all over the world. But it's closed now, as nice of a side hustle as it was.
-							p.
-								Learned a lot about filming and editing video from being involved here. Branched off into parkour for a little while too, where there's a lot of crossover, particularly on the philosophical side of things.
+								Founded <a href="https://www.facebook.com/ElevateSkate/">Elevate Skate Co.</a> a while back, importing gear from shops all over the world. But it's closed now, as nice of a side hustle as it was. I also learned a lot about filming and editing video from being involved here.
 							.center-align
 								.video-container
 									iframe(src="https://player.vimeo.com/video/31335546?portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen)
