--- a/src/views/partials/layout.pug
+++ b/src/views/partials/layout.pug
@@ -1,5 +1,3 @@
-block mixins
-
 doctype html
 html(lang="en")
 	head
@@ -9,7 +7,7 @@ html(lang="en")
 		mixin scripts(url)
 			script(src=url)
 		mixin styles(url)
-			link(href=url, rel="stylesheet")
+			link(href=url rel="stylesheet")
 		block head
 		
 	body
