--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -94,7 +94,7 @@ body
 	*
 		color white !important
 	div
-		center(XY, absolute)
+		center XY absolute
 	carouselImage(link)
 		background-image linear-gradient(rgba(0,0,0,0.85)), url(link)
 		background-repeat no-repeat
@@ -119,7 +119,7 @@ body
 	.card-panel
 		font-size 1.2em
 		span
-			center(X, relative)
+			center X relative
 			text-align center
 
 #thingBox
