--- a/src/views/partials/_main.pug
+++ b/src/views/partials/_main.pug
@@ -16,7 +16,7 @@ main
 							p.
 								I've always enjoyed tinkering with gadgets and poking around the deepest levels of settings in the software I use, so programming was a natural next step. I love the way it demands both the ability to solve problems creatively and then the application of those ideas in a logical and systematic fashion.
 							p.
-								Web development is my main expertise, with Pug, Stylus, ES6 Javascript, and Gulp as my preferred stack. Kotlin and Python are my two other favorite languages. I also know my way around jQuery, PHP (including Laravel), mySQL, and Java (mostly for Android).
+								My day job is as a business software engineer working mostly in PHP; but Pug, Stylus, ES6 Javascript, and Gulp are my preferred stack. Kotlin and Python are my two other favorite languages. I also know my way around mySQL and Java (mostly for Android).
 
 							.row.center-align#skillsList
 								+techSkill("Pug", "pug.svg")
@@ -25,9 +25,7 @@ main
 								+techSkill("Gulp", "gulp.svg")
 								+techSkill("Kotlin", "kotlin.svg")
 								+techSkill("Python", "python.png")
-								+techSkill("jQuery", "jquery.png")
 								+techSkill("PHP", "php.svg")
-								+techSkill("Laravel", "laravel.png")
 								+techSkill("mySQL", "mysql.png")
 								+techSkill("Java", "java.png")
 								+techSkill("Android", "android.png")
