--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -52,6 +52,14 @@ body
 		margin 5px auto
 		min-width 100px
 
+#seeMore
+	font-size 1.25em
+	text-align center
+	width 10px
+	center X absolute
+	@media MobileOnly
+		margin-top -10px
+
 @require "partials/_hover-animation"
 
 .parallax-container
