--- a/src/styles/partials/_base.styl
+++ b/src/styles/partials/_base.styl
@@ -1,8 +1,8 @@
-MobileOnly = '(max-width: 600px)'
-TabletUp = '(min-width: 600px)'
-TabletDown = '(max-width: 992px)'
-TabletOnly = '(min-width: 600px) and (max-width: 992px)'
-DesktopOnly = '(min-width: 992px)'
+MobileOnly = "(max-width: 600px)"
+TabletUp = "(min-width: 600px)"
+TabletDown = "(max-width: 992px)"
+TabletOnly = "(min-width: 600px) and (max-width: 992px)"
+DesktopOnly = "(min-width: 992px)"
 
 body
 	display flex
