--- a/src/views/partials/_main.pug
+++ b/src/views/partials/_main.pug
@@ -12,17 +12,16 @@ main
 						.collapsible-header.black-text#collapsible-1.
 							Software development
 						.collapsible-body.white
-
 							p.
-								I've always enjoyed tinkering with gadgets and poking around the deepest levels of settings in the software I use, so programming was a natural next step. I love the way it demands both the ability to solve problems creatively and then the application of those ideas in a logical and systematic fashion.
+								I've always enjoyed tinkering with technology and poking around the deepest levels of software settings, so programming was a natural next step. I love the way it demands both the ability to solve problems creatively and then the application of those ideas in a logical and systematic fashion.
 							p.
-								My day job is as a business software engineer working mostly in PHP; but Pug, Stylus, ES6 Javascript, and Gulp are my preferred stack. Kotlin and Python are my two other favorite languages. I also know my way around mySQL and Java (mostly for Android).
+								Pug, Stylus, ES6 Javascript, and Flask are my preferred stack, while Kotlin and Python for task scripting are my two other favorite languages. My day job is as a business software engineer working mostly in PHP and mySQL, and I also know my way with Java (mostly for Android).
 
 							.row.center-align#skillsList
 								+techSkill("Pug", "pug.svg")
 								+techSkill("Stylus", "stylus.png")
 								+techSkill("Javascript", "js.svg")
-								+techSkill("Gulp", "gulp.svg")
+								+techSkill("Flask", "flask.png")
 								+techSkill("Kotlin", "kotlin.svg")
 								+techSkill("Python", "python.png")
 								+techSkill("PHP", "php.svg")
@@ -32,31 +31,37 @@ main
 
 							h5 Some of my past projects:
 							.row.carousel.carousel-slider.center(data-indicators="true")
-								.carousel-item(href="#one!")
-									div
-										h2 What's That Edit?
-										p A site for sharing and indexing skate videos
-										a.btn.red.darken-1(href="http://whats-that-edit.herokuapp.com") View
-								.carousel-item(href="#two!")
-									div
-										h2 Monoposto
-										p Formula 1 data visualisation site
-										a.btn.red.darken-1(href="http://salvadornico.x10host.com/f1vis") View
-								.carousel-item(href="#three!")
-									div
-										h2 Leather &amp; Turf
-										p A Philippines Football League club reference site
-										a.btn.red.darken-1(href="https://salvadornico.github.io/Tuitt/module-1/capstone1") View
-								.carousel-item(href="#four!")
-									div
-										h2 Brain Train
-										p.white-text A simple memory game
-										a.btn.red.darken-1(href="https://salvadornico.github.io/Brain-Train/web") View
-								.carousel-item(href="#five!")
-									div
-										h2 Rock Paper Scissors
-										p.white-text A basic Rock-Paper-Scissors-Lizard-Spock Android game
-										a.btn.red.darken-1(href="https://github.com/salvadornico/Rock-Paper-Scissors") Source
+								+carouselItem(
+									"one",
+									"What's That Edit?",
+									"A site for sharing and indexing skate videos",
+									"http://whats-that-edit.herokuapp.com"
+								)
+								+carouselItem(
+									"two",
+									"Monoposto",
+									"Formula 1 data visualisation site",
+									"http://whats-that-edit.herokuapp.com"
+								)
+								+carouselItem(
+									"three",
+									"Brain Train",
+									"A simple memory game",
+									"https://salvadornico.github.io/Brain-Train/web"
+								)
+								+carouselItem(
+									"four",
+									"Leather & Turf",
+									"A Philippines Football League club reference site",
+									"https://salvadornico.github.io/Tuitt/module-1/capstone1"
+								)
+								+carouselItem(
+									"five",
+									"Rock Paper Scissors",
+									"A Rock-Paper-Scissors-Lizard-Spock Android game",
+									"https://github.com/salvadornico/Rock-Paper-Scissors",
+									"Source"
+								)
 
 					li
 						.collapsible-header.black-text#collapsible-2.
@@ -103,13 +108,10 @@ main
 									iframe(src="https://player.vimeo.com/video/31335546?portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen)
 
 		h3.center-align.section-header Things That Inspire Me
-		.row.page-section#inspirations
-			.card-panel.red.lighten-1.flow-text.valign-wrapper
-				span.white-text Stories behind great ideas
-			.card-panel.red.lighten-1.flow-text.valign-wrapper
-				span.white-text Working with people who love their craft
-			.card-panel.red.lighten-1.flow-text.valign-wrapper
-				span.white-text Elegant solutions to awkward problems
+		#inspirations.row.page-section
+			+inspCard("Stories behind great ideas")
+			+inspCard("Working with people who love their craft")
+			+inspCard("Elegant solutions to awkward problems")
 				
 		h3.center-align.section-header Things I'm Enjoying Lately
 		#thingBox.row.page-section
