--- a/src/views/partials/_header.pug
+++ b/src/views/partials/_header.pug
@@ -3,7 +3,7 @@ header#banner.container
 		.col.s12.l5
 			.card.large.hoverable
 				.card-image
-					img(src="images/portrait.png" alt="That's me!")
+					img(src=`${cloudinaryLink}/portrait.png` alt="That's me!")
 				.card-content
 					h1 Nico Salvador
 					h3 Quezon City, Philippines
