Switched to HTTPS for Cloudinary links

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -1,7 +1,7 @@
 @require "partials/_base"
 
 bodyColor = #3949ab
-cloudinaryLink = "http://res.cloudinary.com/salvadornico/image/upload/v1507347645/Portfolio"
+cloudinaryLink = "https://res.cloudinary.com/salvadornico/image/upload/v1507347645/Portfolio"
 
 *
 	position relative
