--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,7 +2,7 @@ extends partials/layout
 include partials/_mixins
 
 block head
-	- var cloudinaryLink = "http://res.cloudinary.com/salvadornico/image/upload/v1507347645/Portfolio"
+	- var cloudinaryLink = "https://res.cloudinary.com/salvadornico/image/upload/v1507347645/Portfolio"
 	title Nico Salvador
 	link(rel="icon" type="image/png" href=`${cloudinaryLink}/icon.png`)
 	base(target="_blank")
