Switched CSS units to rem

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -12,7 +12,6 @@ body
 	color white
 
 #banner
-	padding 30px auto 50px
 	min-height 100vh
 	@media TabletUp
 		padding-top 10vh
@@ -29,32 +28,27 @@ body
 			display block
 			color black
 		h1
-			margin-top 10px
-			font-size 2em
+			margin-top 0.3rem
+			font-size 2rem
 		h3
-			margin-top 10px
-			font-size 1.6em
+			font-size 1.6rem
 		div
 			position absolute
 			bottom 0
 			margin-bottom 3%
 		a
 			display inline-block
-			margin auto 5px
+			margin auto 5px 5px
 		i
 			color black
-			font-size 1.7em
+			font-size 1.7rem
 
-.sidebox
-	padding-top 30px
-	padding-left 40px
-	a
-		display block
-		margin 5px auto
-		min-width 100px
+.sidebox a
+	display block
+	min-width 100px
 
 #seeMore
-	font-size 1.25em
+	font-size 1.25rem
 	text-align center
 	width 10px
 	center X absolute
@@ -73,7 +67,7 @@ body
 	font-family 'Montserrat', sans-serif
 
 .collapsible
-	font-size 1.2em
+	font-size 1.2rem
 	.collapsible-body
 		padding 5px 30px 30px
 		*
@@ -127,7 +121,7 @@ body
 		grid-template-rows auto
 		grid-column-gap 10px
 	.card-panel
-		font-size 1.2em
+		font-size 1.2rem
 		span
 			center X relative
 			text-align center
@@ -138,7 +132,7 @@ body
 .thing
 	width 200px
 	span
-		font-size 1.5em
+		font-size 1.5rem
 
 #music
 	height 100px
@@ -184,4 +178,4 @@ footer
 	bottom 0
 	width 100%
 	p
-		line-height 2.4em
+		line-height 2.4rem
